--- a/tags.html
+++ b/tags.html
@@ -60,7 +60,7 @@
 <meta name="twitter:description" content="" />
 <meta name="twitter:image" content="https://purl.org/qxd/assets/img/qi2016.jpg" />
 <!-- Baidu website verification code -->
-<meta name="baidu-site-verification" content="cAv3dLIDps" />
+<meta name="baidu-site-verification" content="5FQ1dXMyow" />
 
     <!-- Le styles -->
    <!--<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Quattrocento+Sans:bold,bolditalic,italic|Quattrocento+Sans">
@@ -451,16 +451,16 @@ var _hmt = _hmt || [];
         -->
           <div class='cloud'>
             <h1> Tag Cloud</h1>
-            <a style='font-size: NaN%' href='/tags.html#GPU'>GPU</a>
-<a style='font-size: NaN%' href='/tags.html#quantum dynamics'>quantum dynamics</a>
-<a style='font-size: NaN%' href='/tags.html#Julia'>Julia</a>
-<a style='font-size: NaN%' href='/tags.html#poster'>poster</a>
-<a style='font-size: NaN%' href='/tags.html#nanofiber'>nanofiber</a>
+            <a style='font-size: NaN%' href='/tags.html#nanofiber'>nanofiber</a>
 <a style='font-size: NaN%' href='/tags.html#conference'>conference</a>
-<a style='font-size: NaN%' href='/tags.html#quantum optics'>quantum optics</a>
-<a style='font-size: NaN%' href='/tags.html#summer study'>summer study</a>
-<a style='font-size: NaN%' href='/tags.html#presentation'>presentation</a>
 <a style='font-size: NaN%' href='/tags.html#matlab'>matlab</a>
+<a style='font-size: NaN%' href='/tags.html#GPU'>GPU</a>
+<a style='font-size: NaN%' href='/tags.html#presentation'>presentation</a>
+<a style='font-size: NaN%' href='/tags.html#summer study'>summer study</a>
+<a style='font-size: NaN%' href='/tags.html#quantum dynamics'>quantum dynamics</a>
+<a style='font-size: NaN%' href='/tags.html#poster'>poster</a>
+<a style='font-size: NaN%' href='/tags.html#quantum optics'>quantum optics</a>
+<a style='font-size: NaN%' href='/tags.html#Julia'>Julia</a>
 
           </div>
 
