--- a/search.html
+++ b/search.html
@@ -138,7 +138,7 @@
     <script type="text/javascript" src="/assets/js/tipuesearch_data.js"></script>
     <script type="text/javascript" src="/assets/js/tipuesearch.js"></script>
     <!-- Equations using MathJax -->
-    <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script type="text/javascript" src="https://cdn.rawgit.com/mathjax/MathJax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <script type="text/x-mathjax-config"> MathJax.Hub.Config({ TeX: { equationNumbers: {autoNumber: "all"} } });       </script>
     <!-- A little twitter link -->
     <script type="text/javascript" src="https://platform.twitter.com/widgets.js"></script>
