--- a/tags.html
+++ b/tags.html
@@ -451,16 +451,16 @@ var _hmt = _hmt || [];
         -->
           <div class='cloud'>
             <h1> Tag Cloud</h1>
-            <a style='font-size: NaN%' href='/tags.html#matlab'>matlab</a>
-<a style='font-size: NaN%' href='/tags.html#nanofiber'>nanofiber</a>
-<a style='font-size: NaN%' href='/tags.html#quantum optics'>quantum optics</a>
-<a style='font-size: NaN%' href='/tags.html#presentation'>presentation</a>
-<a style='font-size: NaN%' href='/tags.html#GPU'>GPU</a>
-<a style='font-size: NaN%' href='/tags.html#quantum dynamics'>quantum dynamics</a>
-<a style='font-size: NaN%' href='/tags.html#conference'>conference</a>
-<a style='font-size: NaN%' href='/tags.html#Julia'>Julia</a>
-<a style='font-size: NaN%' href='/tags.html#summer study'>summer study</a>
+            <a style='font-size: NaN%' href='/tags.html#quantum optics'>quantum optics</a>
 <a style='font-size: NaN%' href='/tags.html#poster'>poster</a>
+<a style='font-size: NaN%' href='/tags.html#conference'>conference</a>
+<a style='font-size: NaN%' href='/tags.html#presentation'>presentation</a>
+<a style='font-size: NaN%' href='/tags.html#nanofiber'>nanofiber</a>
+<a style='font-size: NaN%' href='/tags.html#quantum dynamics'>quantum dynamics</a>
+<a style='font-size: NaN%' href='/tags.html#Julia'>Julia</a>
+<a style='font-size: NaN%' href='/tags.html#matlab'>matlab</a>
+<a style='font-size: NaN%' href='/tags.html#summer study'>summer study</a>
+<a style='font-size: NaN%' href='/tags.html#GPU'>GPU</a>
 
           </div>
 
@@ -540,7 +540,7 @@ var _hmt = _hmt || [];
     <script src="//cdn.jsdelivr.net/jquery.mixitup/latest/jquery.mixitup.min.js"></script>
     <script src="/assets/js/mixitup-mine.js"></script>
     <!-- Equations using MathJax -->
-    <script type="text/javascript" src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script type="text/javascript" src="//cdn.rawgit.com/mathjax/MathJax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <script type="text/x-mathjax-config"> MathJax.Hub.Config({ TeX: { equationNumbers: {autoNumber: "all"} } });       </script>
     <script type="text/x-mathjax-config"> MathJax.Hub.Config({ tex2jax: { inlineMath: [['$', '$'],['\\(','\\)'] ], processEscapes: true } }); </script>
     <!-- Self-defined extensions and macros. -->
