--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@ var _hmt = _hmt || [];
 <a href="https://scholar.google.com/citations?user=6FdqHlIAAAAJ&hl=en"><img src="/assets/img/icon-scholar.png" height="40px" alt="GoogleScholar"></a>
 <a href="https://twitter.com/i2000s"><img src="/assets/img/icon-twitter.png" height="45px" alt="Twitter"></a>
 <a href="https://www.linkedin.com/in/xiaodongqi"><img src="/assets/img/icon-linkedin.png" height="40px" alt="LinkedIn"></a>
+<a href="https://www.reddit.com/r/quantuminformation"><img src="/assets/img/icon-reddit.svg" height="41px" alt="Reddit"></a>
 <a href="/atom.xml" onClick="recordOutboundLink(this, 'Outbound Links', 'RSS'); return false;"><img src="/assets/img/icon-rss.png" height="40px" alt="feed"></a>
 
        </div>
