--- a/tags.html
+++ b/tags.html
@@ -451,16 +451,16 @@ var _hmt = _hmt || [];
         -->
           <div class='cloud'>
             <h1> Tag Cloud</h1>
-            <a style='font-size: NaN%' href='/tags.html#quantum optics'>quantum optics</a>
+            <a style='font-size: NaN%' href='/tags.html#matlab'>matlab</a>
+<a style='font-size: NaN%' href='/tags.html#quantum optics'>quantum optics</a>
+<a style='font-size: NaN%' href='/tags.html#Julia'>Julia</a>
 <a style='font-size: NaN%' href='/tags.html#poster'>poster</a>
-<a style='font-size: NaN%' href='/tags.html#conference'>conference</a>
-<a style='font-size: NaN%' href='/tags.html#presentation'>presentation</a>
 <a style='font-size: NaN%' href='/tags.html#nanofiber'>nanofiber</a>
 <a style='font-size: NaN%' href='/tags.html#quantum dynamics'>quantum dynamics</a>
-<a style='font-size: NaN%' href='/tags.html#Julia'>Julia</a>
-<a style='font-size: NaN%' href='/tags.html#matlab'>matlab</a>
-<a style='font-size: NaN%' href='/tags.html#summer study'>summer study</a>
 <a style='font-size: NaN%' href='/tags.html#GPU'>GPU</a>
+<a style='font-size: NaN%' href='/tags.html#summer study'>summer study</a>
+<a style='font-size: NaN%' href='/tags.html#presentation'>presentation</a>
+<a style='font-size: NaN%' href='/tags.html#conference'>conference</a>
 
           </div>
 
@@ -483,8 +483,9 @@ var _hmt = _hmt || [];
 <a href="https://scholar.google.com/citations?user=6FdqHlIAAAAJ&hl=en"><img src="/assets/img/icon-scholar.png" height="40px" alt="GoogleScholar"></a>
 <a href="https://twitter.com/i2000s"><img src="/assets/img/icon-twitter.png" height="45px" alt="Twitter"></a>
 <a href="https://www.linkedin.com/in/xiaodongqi"><img src="/assets/img/icon-linkedin.png" height="40px" alt="LinkedIn"></a>
+<a href="https://www.reddit.com/r/quantuminformation"><img src="/assets/img/icon-reddit.svg" height="41px" alt="Reddit"></a>
 <a href="/atom.xml" onClick="recordOutboundLink(this, 'Outbound Links', 'RSS'); return false;"><img src="/assets/img/icon-rss.png" height="40px" alt="feed"></a>
-<a href="https://physics.stackexchange.com/users/37682/xiaodong-qi"><img src="/assets/img/icon-stackoverflow.png" height="40px" alt="Physics Stackexchange"></a>
+
 <iframe class="github-btn" src="//ghbtns.com/github-btn.html?user=i2000s&repo=i2000s.github.io&type=star&count=true&size=large" allowtransparency="true" frameborder="0" scrolling="0" width="150px" height="40px" style="vertical-align:middle; margin-top:9px;"></iframe>
 
               </div>
